--- a/.github/workflows/ets-provider-validate.yml
+++ b/.github/workflows/ets-provider-validate.yml
@@ -9,10 +9,6 @@ jobs:
   provider_validation:
     runs-on: ubuntu-latest
 
-    defaults:
-      run:
-        working-directory: ${{ github.workspace }}
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -25,9 +21,9 @@ jobs:
       - name: Install project + test dependencies
         run: |
           python -m pip install --upgrade pip wheel setuptools
-          pip install .          # install your ETS package
-          pip install pytest     # ensure pytest exists
+          pip install .
+          pip install pytest
 
       - name: Validate providers (offline integration test)
         run: |
-          pytest -q tests/integration/test_provider_registry_offline.py
+          python -m pytest -q tests/integration/test_provider_registry_offline.py
