--- a/.github/workflows/ets-full.yml
+++ b/.github/workflows/ets-full.yml
@@ -1,4 +1,4 @@
-name: ETS Full System Pipeline
+name: ETS Full Pipeline
 
 on:
   push:
@@ -6,102 +6,137 @@ on:
   workflow_dispatch:
 
 jobs:
+
+  ###########################################################################
+  #  PHASE 1 — ENV SETUP
+  ###########################################################################
   env_setup:
     runs-on: ubuntu-latest
     defaults:
       run:
         working-directory: ${{ github.workspace }}
+
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
         with:
           python-version: "3.11"
 
-      - name: Install project + test dependencies
+      - name: Install project + tests
         run: |
           python -m pip install --upgrade pip wheel setuptools
-          python -m pip install -e .
-          python -m pip install pytest
+          pip install -e .
+          pip install pytest pandas
 
-      - name: Smoke tests (imports + config)
+      - name: Verify imports + configuration determinism
+        env:
+          PYTHONPATH: "${{ github.workspace }}/src"
         run: |
-          python -m pytest -q tests/smoke
+          pytest -q --disable-warnings tests/smoke
 
+
+  ###########################################################################
+  #  PHASE 2 — PROVIDER VALIDATION
+  ###########################################################################
   provider_validation:
     runs-on: ubuntu-latest
     needs: env_setup
     defaults:
       run:
         working-directory: ${{ github.workspace }}
+
     steps:
       - uses: actions/checkout@v4
+
       - uses: actions/setup-python@v5
         with:
           python-version: "3.11"
 
-      - name: Install project + test dependencies
+      - name: Install project + offline provider tests
         run: |
           python -m pip install --upgrade pip wheel setuptools
-          python -m pip install -e .
-          python -m pip install pytest
+          pip install -e .
+          pip install pytest
 
       - name: Validate providers (offline integration)
         env:
-          ETS_OFFLINE_ONLY: "1"
+          PYTHONPATH: "${{ github.workspace }}/src"
         run: |
-          python -m pytest -q tests/integration/test_provider_registry_offline.py
+          pytest -q tests/integration/test_provider_registry_offline.py
 
+
+  ###########################################################################
+  #  PHASE 3 — BACKTEST
+  ###########################################################################
   backtest:
     runs-on: ubuntu-latest
     needs: provider_validation
     defaults:
       run:
         working-directory: ${{ github.workspace }}
+
     steps:
       - uses: actions/checkout@v4
+
       - uses: actions/setup-python@v5
         with:
           python-version: "3.11"
 
-      - name: Install project + test dependencies
+      - name: Install project + test deps
         run: |
           python -m pip install --upgrade pip wheel setuptools
-          python -m pip install -e .
-          python -m pip install pytest
+          pip install -e .
+          pip install pytest pandas
 
-      - name: Run backtest roundtrip (integration)
+      - name: Run backtest (fixtures)
         env:
-          PYTHONPATH: ${{ github.workspace }}/src
-        run: |
-          python -m pytest -q tests/integration/test_backtest_roundtrip.py
-
-      - name: Run backtest with fixtures
-        env:
-          PYTHONPATH: ${{ github.workspace }}/src
-          BACKTEST_SIGNALS: tests/fixtures/mock_signals.csv
-          BACKTEST_HISTORY: tests/fixtures/mock_history.csv
+          PYTHONPATH: "${{ github.workspace }}/src"
+          BACKTEST_SIGNALS: "tests/fixtures/mock_signals.csv"
+          BACKTEST_HISTORY: "tests/fixtures/mock_history.csv"
         run: |
           python scripts/run_backtest.py
 
-  cli_prediction:
+      - name: pytest backtest core
+        env:
+          PYTHONPATH: "${{ github.workspace }}/src"
+        run: |
+          pytest -q tests/test_backtest_core.py
+
+
+  ###########################################################################
+  #  PHASE 4 — FULL SMOKE + CLI
+  ###########################################################################
+  full_smoke:
     runs-on: ubuntu-latest
     needs: backtest
     defaults:
       run:
         working-directory: ${{ github.workspace }}
+
     steps:
       - uses: actions/checkout@v4
+
       - uses: actions/setup-python@v5
         with:
           python-version: "3.11"
 
-      - name: Install project
+      - name: Install full environment
         run: |
           python -m pip install --upgrade pip wheel setuptools
-          python -m pip install -e .
+          pip install -e .
+          pip install pytest pandas
 
-      - name: Run end-to-end ETS CLI (prediction)
+      - name: Run smoke tests
         env:
-          PYTHONPATH: ${{ github.workspace }}/src
+          PYTHONPATH: "${{ github.workspace }}/src"
         run: |
-          python -m ets.main --session amc --date 2025-10-01 --tickers tickers.csv
+          pytest -q tests/smoke
+
+      - name: Validate CLI help
+        env:
+          PYTHONPATH: "${{ github.workspace }}/src"
+        run: |
+          python -m ets.main --help
