--- a/.github/workflows/ets-provider-validate.yml
+++ b/.github/workflows/ets-provider-validate.yml
@@ -8,6 +8,7 @@ on:
 jobs:
   provider_validation:
     runs-on: ubuntu-latest
+
     defaults:
       run:
         working-directory: ${{ github.workspace }}
@@ -25,10 +26,11 @@ jobs:
         run: |
           python -m pip install --upgrade pip wheel setuptools
           python -m pip install -e .
-          python -m pip install pytest
+          python -m pip install pytest pandas
 
       - name: Validate providers (offline integration test)
         env:
           ETS_OFFLINE_ONLY: "1"
+          PYTHONPATH: "${{ github.workspace }}/src"
         run: |
           python -m pytest -q tests/integration/test_provider_registry_offline.py
