--- a/.github/workflows/ets-env-setup.yml
+++ b/.github/workflows/ets-env-setup.yml
@@ -1,16 +1,13 @@
-name: ETS Env Setup
-
-on:
-  push:
-    branches: [ main, ets_update_2, ets_update_3 ]
-  workflow_dispatch:
-
 jobs:
   env_setup:
     runs-on: ubuntu-latest
     defaults:
       run:
         working-directory: ${{ github.workspace }}
+
+    env:
+      ETS_STRICT_DETERMINISM: "1"
+      ETS_SEED: "1337"
 
     steps:
       - name: Checkout repository
@@ -21,12 +18,13 @@ jobs:
         with:
           python-version: "3.11"
 
-      - name: Install project + test dependencies
+      - name: Install core dependencies
         run: |
           python -m pip install --upgrade pip wheel setuptools
-          python -m pip install -e .
-          python -m pip install pytest
+          pip install .
+          pip install pytest
+          pip install requests
 
-      - name: Smoke tests (imports + config)
+      - name: Run basic smoke imports
         run: |
-          python -m pytest -q tests/smoke
+          pytest -q --disable-warnings tests/smoke
