--- a/.github/workflows/ets-full.yml
+++ b/.github/workflows/ets-full.yml
@@ -1,142 +1,31 @@
-name: ETS Full Pipeline
-
-on:
-  push:
-    branches: [ main, ets_update_2, ets_update_3 ]
-  workflow_dispatch:
-
 jobs:
 
   ###########################################################################
   #  PHASE 1 — ENV SETUP
   ###########################################################################
   env_setup:
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ${{ github.workspace }}
-
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.11"
-
-      - name: Install project + tests
-        run: |
-          python -m pip install --upgrade pip wheel setuptools
-          pip install -e .
-          pip install pytest pandas
-
-      - name: Verify imports + configuration determinism
-        env:
-          PYTHONPATH: "${{ github.workspace }}/src"
-        run: |
-          pytest -q --disable-warnings tests/smoke
+    uses: ./.github/workflows/ets-env-setup.yml
 
 
   ###########################################################################
   #  PHASE 2 — PROVIDER VALIDATION
   ###########################################################################
   provider_validation:
-    runs-on: ubuntu-latest
     needs: env_setup
-    defaults:
-      run:
-        working-directory: ${{ github.workspace }}
-
-    steps:
-      - uses: actions/checkout@v4
-
-      - uses: actions/setup-python@v5
-        with:
-          python-version: "3.11"
-
-      - name: Install project + offline provider tests
-        run: |
-          python -m pip install --upgrade pip wheel setuptools
-          pip install -e .
-          pip install pytest
-
-      - name: Validate providers (offline integration)
-        env:
-          PYTHONPATH: "${{ github.workspace }}/src"
-        run: |
-          pytest -q tests/integration/test_provider_registry_offline.py
+    uses: ./.github/workflows/ets-provider-validate.yml
 
 
   ###########################################################################
   #  PHASE 3 — BACKTEST
   ###########################################################################
   backtest:
-    runs-on: ubuntu-latest
     needs: provider_validation
-    defaults:
-      run:
-        working-directory: ${{ github.workspace }}
-
-    steps:
-      - uses: actions/checkout@v4
-
-      - uses: actions/setup-python@v5
-        with:
-          python-version: "3.11"
-
-      - name: Install project + test deps
-        run: |
-          python -m pip install --upgrade pip wheel setuptools
-          pip install -e .
-          pip install pytest pandas
-
-      - name: Run backtest (fixtures)
-        env:
-          PYTHONPATH: "${{ github.workspace }}/src"
-          BACKTEST_SIGNALS: "tests/fixtures/mock_signals.csv"
-          BACKTEST_HISTORY: "tests/fixtures/mock_history.csv"
-        run: |
-          python scripts/run_backtest.py
-
-      - name: pytest backtest core
-        env:
-          PYTHONPATH: "${{ github.workspace }}/src"
-        run: |
-          pytest -q tests/test_backtest_core.py
+    uses: ./.github/workflows/ets-backtest.yml
 
 
   ###########################################################################
   #  PHASE 4 — FULL SMOKE + CLI
   ###########################################################################
   full_smoke:
-    runs-on: ubuntu-latest
     needs: backtest
-    defaults:
-      run:
-        working-directory: ${{ github.workspace }}
-
-    steps:
-      - uses: actions/checkout@v4
-
-      - uses: actions/setup-python@v5
-        with:
-          python-version: "3.11"
-
-      - name: Install full environment
-        run: |
-          python -m pip install --upgrade pip wheel setuptools
-          pip install -e .
-          pip install pytest pandas
-
-      - name: Run smoke tests
-        env:
-          PYTHONPATH: "${{ github.workspace }}/src"
-        run: |
-          pytest -q tests/smoke
-
-      - name: Validate CLI help
-        env:
-          PYTHONPATH: "${{ github.workspace }}/src"
-        run: |
-          python -m ets.main --help
+    uses: ./.github/workflows/ets-smoke-cli.yml
